@@ -1,3 +1,7 @@
+2006-08-28 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* src/Win_GParted.cc: usability stuff + trivial fix (#353109, #353111)
+
 2006-08-27 Bart Hakvoort <hakvoort@cvs.gnome.org>
 	
 	* include/DialogFeatures.h,
